--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,1 +1,8 @@
-<%= render "form", blog: @blog %>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+      <%= render "form", blog: @blog %>
+      </div>
+    </div>
+  </div>
