--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,8 +4,8 @@
         <% @blogs.each do |blog| %>
         <div class="post-preview">
           <%= link_to blog_path(blog.id) do %>
-          <%= image_tag blog.image.variant(resize_to_limit:[100,100]).processed, class:'img-fluid' if blog.image.attached? %>
             <h2 class="post-title">
+              <%= image_tag blog.image.variant(resize_to_limit:[100,100]).processed, class:'img-fluid' if blog.image.attached? %>
               <%= blog.title %>
             </h2>
           <% end %>
@@ -13,13 +13,15 @@
               <%= strip_tags(blog.content.to_s).gsub(/[\n]/,"").strip .truncate(20) %>
             </h3>
           </a>
+          <a href="#">Tag</a>
           <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
+            <%= blog.created_at %></p>
         </div>
         <hr>
         <% end %>
       </div>
+          <%= render "layouts/sidebar" %>
+
     </div>
   </div>
   <div class="clearfix">
