--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,8 +10,8 @@
             </h3>
           </a>
           <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
+            <a href="#">Tag</a>
+            <%= @blog.created_at %></p>
         <hr>
       </div>
     </div>
