--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,30 +1,50 @@
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <% @blogs.each do |blog| %>
-        <div class="post-preview">
-          <%= link_to blog_path(blog.id) do %>
-            <h2 class="post-title">
-              <%= image_tag blog.image.variant(resize_to_limit:[100,100]).processed, class:'img-fluid' if blog.image.attached? %>
-              <%= blog.title %>
-            </h2>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      <% if @blog.present? %> <%# タグ絞り込み表示 %>
+        <h1><%= "#{@tag} に関連する投稿" %></h1>
+          <% @blog.each do |blog| %>
+            <div class="post-preview">
+              <%= link_to blog_path(blog.id) do %>
+                <h2 class="post-title">
+                  <%= image_tag blog.image.variant(resize_to_limit:[100,100]).processed, class:'img-fluid' if blog.image.attached? %>
+                  <%= blog.title %>
+                </h2>
+              <% end %>
+              <h3 class="post-subtitle">
+                <%= strip_tags(blog.content.to_s).gsub(/[\n]/,"").strip .truncate(20) %>
+              </h3>
+              </a>
+              <a>関連項目</a><%= blog.tag_list %>
+              <p class="post-meta">Posted by</p>
+                <%= blog.created_at %></p>
+            </div>
+            <hr>
           <% end %>
+      <% else %>
+        <% @blogs.each do |blog| %>
+          <div class="post-preview">
+            <%= link_to blog_path(blog.id) do %>
+              <h2 class="post-title">
+                <%= image_tag blog.image.variant(resize_to_limit:[100,100]).processed, class:'img-fluid' if blog.image.attached? %>
+                <%= blog.title %>
+              </h2>
+            <% end %>
             <h3 class="post-subtitle">
               <%= strip_tags(blog.content.to_s).gsub(/[\n]/,"").strip .truncate(20) %>
             </h3>
-          </a>
-          <a>関連項目</a><%= blog.tag_list %>
-          <p class="post-meta">Posted by
-            </p>
-            <%= blog.created_at %></p>
-        </div>
-        <hr>
+            </a>
+            <a>関連項目</a><%= blog.tag_list %>
+            <p class="post-meta">Posted by</p>
+              <%= blog.created_at %></p>
+          </div>
+          <hr>
         <% end %>
-      </div>
-          <%= render "layouts/sidebar" %>
-
+      <% end %>
     </div>
+    <%= render "layouts/sidebar" %>
   </div>
-  <div class="clearfix">
-    <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-  </div>
+</div>
+<div class="clearfix">
+  <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+</div>
