--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -15,7 +15,8 @@
                 <%= strip_tags(blog.content.to_s).gsub(/[\n]/,"").strip .truncate(20) %>
               </h3>
               </a>
-              <a>関連項目</a><%= blog.tag_list %>
+              <a>関連項目</a>
+              <%= render "taglist", tags: blog.tags %>
               <p class="post-meta">Posted by</p>
                 <%= blog.created_at %></p>
             </div>
@@ -34,7 +35,8 @@
               <%= strip_tags(blog.content.to_s).gsub(/[\n]/,"").strip .truncate(20) %>
             </h3>
             </a>
-            <a>関連項目</a><%= blog.tag_list %>
+            <a>関連項目</a>
+            <%= render "taglist", tags: blog.tags %>
             <p class="post-meta">Posted by</p>
               <%= blog.created_at %></p>
           </div>
@@ -42,7 +44,7 @@
         <% end %>
       <% end %>
     </div>
-    <%= render "layouts/sidebar" %>
+      <%= render "layouts/sidebar" %>
   </div>
 </div>
 <div class="clearfix">
