--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,6 +1,4 @@
 <div class="col-sm-2"></div>
 <%# タグ一覧表示 %>
-<% @tags.each do |tag| %>
-  <%= link_to "#{tag.name}(#{tag.taggings_count})", blogs_path(tag: tag.name) %>
-<% end %>
+  <%= render "taglist", tags: @tags %>
 </div>
