--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -44,7 +44,9 @@
         <% end %>
       <% end %>
     </div>
+    <div class="col-sm-2">
       <%= render "layouts/sidebar" %>
+    </div>
   </div>
 </div>
 <div class="clearfix">
