--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,14 +8,15 @@
           <h3 class="post-subtitle">
             <%= @blog.content %>
           </h3>
-        </a>
         <p class="post-meta">Posted by
-          <a href="#">Tag</a>
+          <%= @blog.admin.name %></p>
           <%= @blog.created_at %></p>
       <hr>
     </div>
   </div>
 </div>
 <%= link_to "ブログ一覧へ", blogs_path %>
-<%= link_to "編集", edit_blog_path(@blog.id) %>
-<%= link_to "削除", blog_path(@blog.id),method: :delete %>
+<% if admin_signed_in? && current_admin.id == @admin.id %>
+  <%= link_to "編集", edit_blog_path(@blog.id) %>
+  <%= link_to "削除", blog_path(@blog.id),method: :delete %>
+<% end %>
